mdapipkg/objects/Region_Health__c.object
<CustomObject>
    <description>This houses Regional Health Metrics</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to Region</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Region Health</relationshipLabel>
        <relationshipName>Region_Health</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnualDueslocalcurrency__c</fullName>
        <label>Annual Dues (local currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Chapter_Dues_US_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Annual_Regional_Dues__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Chapter Dues (US$) - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Chapter_Learning_Budget_US_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Annual_Chapter_Learning_Budget__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Chapter Learning Budget US$ - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Chapter_Learning_Budget__c</fullName>
        <label>Annual Chapter Learning Budget Total US$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Dues_local_currency_Avg__c</fullName>
        <formula>AnnualDueslocalcurrency__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Dues (local currency) - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Education_Rating_Previous__c</fullName>
        <inlineHelpText>For Previous Fiscal Year</inlineHelpText>
        <label>Annual Learning Rating (Prev FY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Learning_Rating_current_FY__c</fullName>
        <inlineHelpText>Average Annual Learning Rating (current fiscal year-to-date)</inlineHelpText>
        <label>Annual Learning Rating (current FY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Region_Education_Budget__c</fullName>
        <label>Annual Region Education Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Region_Forum_Budget__c</fullName>
        <label>Annual Region Forum Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Region_Learning_Budget__c</fullName>
        <label>Annual Region Learning Budget US $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Regional_Dues__c</fullName>
        <label>Annual Chapter Dues (US$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Av_Annual_Education_Rating_Previous__c</fullName>
        <inlineHelpText>For Previous Fiscal Year</inlineHelpText>
        <label>Av. Annual Education Rating (Previous)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Av_Member_Event_Attendance_Current__c</fullName>
        <label>Av. Member Event Attendance (Current)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Av_Member_Event_Attendance_Previous__c</fullName>
        <inlineHelpText>Previous Fiscal Year</inlineHelpText>
        <label>Av. Member Event Attendance (Previous)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_Age__c</fullName>
        <inlineHelpText>Average Age of Members</inlineHelpText>
        <label>Average Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Annual_Learning_Rating_Current_FY__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Annual_Learning_Rating_current_FY__c  / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Annual Learning Rating (Current FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Annual_Learning_Rating_Prev_FY__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0,  Annual_Education_Rating_Previous__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Annual Learning Rating (Prev FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Event_Participation_Current__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Member_Event_Attendance_Current__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Event Participation (Current FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Avg_Members_attended_FMLD_since_1_July__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, of_Members_attended_FMLD_since_1_July__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members who have attended a FMLD program since 1 July</inlineHelpText>
        <label>Avg Members attended FMLD since 1 July</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Tenure__c</fullName>
        <label>Average Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAW_Attendance_in_past_2_yrs__c</fullName>
        <inlineHelpText>Chapter Administrator Workshop attendance in past two years</inlineHelpText>
        <label>CAW Attendance in past 2 yrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Admin_FT_PT_None__c</fullName>
        <inlineHelpText>Chapter Administrator Status</inlineHelpText>
        <label>Chapter Admin (FT,PT, None)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Admin_FT__c</fullName>
        <inlineHelpText>Chapter Administrator Status</inlineHelpText>
        <label>Chapter Admin - FT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Admin_None__c</fullName>
        <formula>No_of_Chapters__c -  Chapter_Admin_FT__c -  Chapter_Admin_PT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Admin - None</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Admin_PT__c</fullName>
        <inlineHelpText>Chapter Administrator Status</inlineHelpText>
        <label>Chapter Admin - PT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Chair_3_Officer_Electby_1_Oct__c</fullName>
        <inlineHelpText>Chapter Chair and 3 or more Officer-Elects identified by 1 November</inlineHelpText>
        <label>Chapter Chair/3+ Officer-Elect by 1 Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Event_Participation_Previous__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0,  Member_Event_Attendance_Previous__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Event Participation (Prev FY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chapter_Officer_trained_at_GLC_CLW_Avg__c</fullName>
        <formula>Chapter_Officers_trained_at_GLC_CLW__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Avg number of current Chapter Officers trained at GLC or Regional Training</inlineHelpText>
        <label># Chapter Officer trained at GLC/CLW Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Officers_trained_at_GLC_CLW__c</fullName>
        <inlineHelpText>Number of current Chapter Officers trained at GLC or Regional Training</inlineHelpText>
        <label># Chapter Officers trained at GLC/CLW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_Rep_at_RBM_in_the_past_year__c</fullName>
        <inlineHelpText>Chapter representation at a Regional Board Meeting in the past year</inlineHelpText>
        <label>Chapter Rep at RBM in the past year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_and_Ed_Chair_by_1_July__c</fullName>
        <inlineHelpText>Chapter Chair and Learning Chair identified by 1 July</inlineHelpText>
        <label>Chapter and Ed Chair by 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_have_a_Member_Transition_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Does your Chapter have a Transition Plan?</inlineHelpText>
        <label>Chapter have a Member Transition Plan?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_have_an_Integration_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Does your Chapter have an Integration Plan?</inlineHelpText>
        <label>Chapter have an Integration Plan?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_a_Network_Event_Current_Year__c</fullName>
        <inlineHelpText>Completed a Chapter Network Event in the Current Year</inlineHelpText>
        <label>Completed a Network Event Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Chapter_Strategic_Plan_posted__c</fullName>
        <inlineHelpText>Current Chapter Strategic Plan Posted</inlineHelpText>
        <label>Current Chapter Strategic Plan posted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_of_Primary_Members_Avg__c</fullName>
        <formula>Number_Primary_Members_Current__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Current Primary Members</inlineHelpText>
        <label>Current # of Primary Members Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_of_Secondary_members_Avg__c</fullName>
        <formula>Number_Secondary_Members_Current__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Current Secondary Members</inlineHelpText>
        <label>Current # of Secondary members Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_Chapter_hold_moderator_meetings__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Does your Chapter hold moderator meetings?</inlineHelpText>
        <label>Does Chapter hold moderator meetings?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_your_Chapter_have_a_Diversity_Plan__c</fullName>
        <inlineHelpText>Does your Chapter have a Diversity Plan?</inlineHelpText>
        <label>Does your Chapter have a Diversity Plan?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>CASE(MONTH( Today() + 1), 
7, &quot;Q1&quot;, 
8, &quot;Q1&quot;, 
9, &quot;Q1&quot;, 
10, &quot;Q2&quot;, 
11, &quot;Q2&quot;, 
12, &quot;Q2&quot;, 
1, &quot;Q3&quot;, 
2, &quot;Q3&quot;, 
3, &quot;Q3&quot;, 
4, &quot;Q4&quot;, 
5, &quot;Q4&quot;, 
6, &quot;Q4&quot;, 
&quot;NA&quot;)</formula>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forum_Status__c</fullName>
        <label>Forum Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending Placement</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forum_Transition_Policy_Identified__c</fullName>
        <inlineHelpText>Chapter has a Chapter Forum Transition Policy</inlineHelpText>
        <label>Forum Transition Policy Identified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forums_w_FMLD_trained_moderator_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Forums_w_FMLD_trained_moderator__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Forums w/ FMLD trained moderator - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forums_w_FMLD_trained_moderator__c</fullName>
        <inlineHelpText>Number of Member Forums with a moderator who has been trained in a FMLD program</inlineHelpText>
        <label># Forums w/ FMLD trained moderator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fundamentals_Vouchers_Redeemed__c</fullName>
        <inlineHelpText>Percentage of Forum Fundamentals Vouchers redeemed (new members/spouses)</inlineHelpText>
        <label>Fundamentals Vouchers Redeemed</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Initial_Dues__c</fullName>
        <label>Initiation Fees (US$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initiation_Fee_US_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Initial_Dues__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiation Fee (US$) - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Forum_Policy__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Chapter has a Chapter Forum Policy (check box)</inlineHelpText>
        <label>Chapter has a Chapter Forum Policy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Opt_Out_Prospect_Applications_1__c</fullName>
        <label>Opt-Out Prospect Applications?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Opt_Out_Prospect_Applications__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Opt-out of receiving YPO prospect applications</inlineHelpText>
        <label>Opt-out of YPO prospect applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_REX_Visit_1__c</fullName>
        <label>REX Visit?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_REX_Visit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Chapter has received visit from Regional Management, Regional Chair, or REX Member in past year</inlineHelpText>
        <label>Chapt Visit-Reg Mgt, RC, REX in Past Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Region_Ed_Chair_Identified__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Have these been identified by July 1st.</inlineHelpText>
        <label>Region &amp; Ed. Chair Identified?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Membership_Limit__c</fullName>
        <label>Maximum Membership Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Membership_Limit_Avg__c</fullName>
        <formula>Max_Membership_Limit__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average Maximum Membership Limit</inlineHelpText>
        <label>Maximum Membership Limit Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Age_Average__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Member_Age_Total__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Member Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Age_Total__c</fullName>
        <label>Member Age Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Event_Attendance_Current__c</fullName>
        <label>Member Event Attendance (Current)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_Event_Attendance_Previous__c</fullName>
        <inlineHelpText>Previous Fiscal Year</inlineHelpText>
        <label>Member Event Attendance (Previous)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_Participation_in_Network_Event__c</fullName>
        <inlineHelpText>Percentage of Chapter Members Participating in Network Event</inlineHelpText>
        <label>% Member Participation in Network Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Member_Tenure_Average__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Member_Tenure_Total__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Member Tenure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Tenure_Total__c</fullName>
        <label>Member Tenure Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Participate_in_Network_Event__c</fullName>
        <inlineHelpText>Number of Chapter Members Participating in Network Events</inlineHelpText>
        <label># Members Participate in Network Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_attended_FF_since_1_July_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Members_attended_FF_since_1_July__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Members attended FF since 1 July - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_attended_FF_since_1_July__c</fullName>
        <inlineHelpText>Number of members who have attended a Forum Fundamentals program since 1 July (enter zero for YPO Gold Chapters unless this applies)</inlineHelpText>
        <label># Members attended FF since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_attending_YPO_Event_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Members_attending_YPO_Event__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Members attending YPO Event Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_attending_YPO_Event__c</fullName>
        <inlineHelpText>Number of Members attending non-chapter YPO Events</inlineHelpText>
        <label># of Members attending YPO Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_eligible_to_graduate_30_June_Avg__c</fullName>
        <formula>Number_Can_Graduate_June_30__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members eligible to graduate on 30 June</inlineHelpText>
        <label>Members eligible to graduate-30 June Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_with_a_Complete_Profile__c</fullName>
        <inlineHelpText>Percentage of Members with a &quot;Complete&quot; Profile (8 of 12 factors)</inlineHelpText>
        <label>% Members with a Complete Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Member_GOAL_for_current_fiscal_Y_Avg__c</fullName>
        <formula>New_Member_GOAL_for_current_fiscal_year__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average New Member GOAL for current fiscal year</inlineHelpText>
        <label>New Member GOAL for current fiscal Y Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Member_GOAL_for_current_fiscal_year__c</fullName>
        <inlineHelpText>New Member GOAL for current fiscal year</inlineHelpText>
        <label>New Member GOAL for current fiscal year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_SP_in_Forum_within_6_months_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, New_S_P_in_Forum_within_6_months__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of new spouse/partners placed in Forum within 6 months of joining YPO</inlineHelpText>
        <label>New S/P in Forum (within 6 months) - Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_S_P_in_Forum_within_6_months__c</fullName>
        <inlineHelpText>Number of new spouse/partners placed in Forum within 6 months of joining YPO</inlineHelpText>
        <label>New S/P in Forum (within 6 months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_members_in_Forum_within_6_months_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, New_members_in_Forum_within_6_months__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of new members placed in Forum within 6 months of joining YPO</inlineHelpText>
        <label>New members in Forum within 6 months Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_members_in_Forum_within_6_months__c</fullName>
        <inlineHelpText>Number of new members placed in Forum within 6 months of joining YPO</inlineHelpText>
        <label>New members in Forum (within 6 months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Forum_Mod_Dev_Attendees__c</fullName>
        <inlineHelpText>Since July 1st</inlineHelpText>
        <label>Number Forum Mod. Dev. Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Chapters__c</fullName>
        <label>Number of Chapters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_dues_paying_grandfathered_Members_Av__c</fullName>
        <formula>Non_dues_paying_grandfathered_Members__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of current non-dues paying grandfathered members</inlineHelpText>
        <label>Non-dues paying grandfathered Members Av</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_dues_paying_grandfathered_Members__c</fullName>
        <inlineHelpText>Current number of non-dues paying grandfathered members</inlineHelpText>
        <label>Non-dues paying grandfathered Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Can_Graduate_June_30__c</fullName>
        <label>Members eligible to graduate-June 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Members_Grace_Period__c</fullName>
        <inlineHelpText>Current Fiscal Year</inlineHelpText>
        <label># of members on Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Pri_Sec_Members__c</fullName>
        <formula>of_Primary_and_Secondary_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Pri/Sec Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Primary_Members_Current__c</fullName>
        <label>Current # of Primary members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Primary_Members_June_30__c</fullName>
        <inlineHelpText>Previous Fiscal Year</inlineHelpText>
        <label># of primary members June 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Resignations_Involuntary__c</fullName>
        <inlineHelpText>For Current Fiscal Year</inlineHelpText>
        <label># involuntary resignations current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Resignations_Voluntary__c</fullName>
        <label># of voluntary resignations current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Secondary_Members_Current__c</fullName>
        <label>Current # of Secondary members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_YPO_Cross_Chapter_Events__c</fullName>
        <inlineHelpText>Not YPO-WPO joint events</inlineHelpText>
        <label>Number YPO Cross-Chapter Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_YPO_Cross_Region_Events__c</fullName>
        <inlineHelpText>Not YPO-WPO joint events</inlineHelpText>
        <label>Number YPO Cross-Region Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pct_Chapter_Officers_trained_GLC_CLW__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_Pct_Officers_Trained_GLC_CLW__c / No_of_Chapters__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Chapter Officers trained GLC/CLW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Forum_Fundamentals_Vouchers_redeemed__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, (Fundamentals_Vouchers_Redeemed__c / No_of_Chapters__c) / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Forum Fundamentals Vouchers redeemed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Member_M2MX_Profile__c</fullName>
        <inlineHelpText>Percentage of members with M2Mx profile completion.</inlineHelpText>
        <label>% of Members M2Mx profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Members_Participating_in_a_GCC__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, of_Members_Participating_in_a_GCC__c / Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Members Participating in a GCC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Members_attending_YPO_Event__c</fullName>
        <formula>IF(of_Primary_and_Secondary_Members__c = 0, 0, Members_attending_YPO_Event__c / of_Primary_and_Secondary_Members__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Members attending YPO Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Members_in_Forums__c</fullName>
        <formula>IF(of_Primary_and_Secondary_Members__c = 0, 0,  Total_of_members_in_Forum__c / of_Primary_and_Secondary_Members__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Members Participating in Forums</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Members_with_Complete_Profile__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_Pct_Members_with_Complete_Profile__c / No_of_Chapters__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Members with Complete Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_New_Member_Vouchers_Used_SUM__c</fullName>
        <label>% of New Member Vouchers used SUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_New_Member_Vouchers_used__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Pct_New_Member_Vouchers_Used_SUM__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of New Member Vouchers used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_SP_Participating_in_Forums__c</fullName>
        <formula>IF( of_spouse_partners__c = 0, 0, Total_of_spouse_partners_in_Forum__c / of_spouse_partners__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%Spouse/Partners Participating in Forums</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Spouse_Partners_w_Complete_Profile__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, Total_Pct_S_P_Complete_Profile__c / No_of_Chapters__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Spouse/Partners w/ Complete Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_chapter_growth_past_FY_SUM__c</fullName>
        <label>% of chapter growth (past FY) SUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>